--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,123 +1,59 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
+
+* {
   margin: 0;
-  background-color: linen;
-  background-color: rgb(30, 40, 30);
-  background-color: #f27a82;
-  background-color: #CCC;
-  color: black;
-  color: rgba(255, 255, 255, 0.5);
-  color: hsl(0, 0%, 100%);
-  color: hsla(0, 0%, 0%, 0.5);
-  font-size: 1em;
-  line-height: 1.5em;
+  padding: 0;
 }
 
-/* 기본 폰트 사이즈 - 16px */
-/* 16 - 100% = 1em */
-/* 16 - 50% = 0.5em */
-/* 16 - 150% = 1.5em */
-/* 32 - 200% = 2em */
 
 .box {
-  width: 100%;
-  background-color: #000000;
-  color: #ffffff;
-  /* em - 부모 값을 기준으로 비율 조정된다 */
-  font-size: 0.75em;
-  line-height: 1.5em;
+  width: 300px;
+  margin: 20px;
+  font-size: 16px;
+  line-height: 24px;
+  /* font-weight: normal;
+  font-weight: bold;
+  font-weight: lighter; */
 
-  /* rem - 루트 값을 기준으로 비율 조정된다 */
-  font-size: 0.75rem;
-  line-height: 1.5rem;
+  /* font-weight: 300; /*light*/
+  /* font-weight: 200;  */
+  /*ultra light*/
+  /* font-weight: 100;  */
+  /*thin*/
+  /* font-weight: 500;  */
+  /*semi bold*/
+  /* font-weight: 600;  */
+  /*bold*/
+  /* font-weight: 700;
+  font-weight: 800; */
+  /* font-weight: 900;
+  font-weight: 400;reguler */
+
+  /* font-style: oblique;
+  font-style: italic;
+  font-style: normal; */
+
+	/* font-family: 'Noto Sans KR', 'Roboto', 'Noto Sans', -apple-system, 'Helvetica Neue', 'Arial', sans-serif;
+
+	font-family: 'SF Pro KR', 'SF Pro Display', 'SF Pro Icons', 'Apple Gothic', 'HY Gulim', 'MalgunGothic', 'HY Dotum', 'Lexi Gulim', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif; */
+
+
+  /*폰트 축약형 - 수정*/
 }
 
-div.box {
-  /* width: 50%; */
-  /* width: 50vw; viewport width */
-  /* height: 400px; */
+.box-1 {
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
-p.box {
-  width: 500px;
-  height: 40vh; /* viewport height */
+.box-2 {
+  font-family: 'Montserrat', sans-serif;
 }
 
-.image {
-  width: 500px;
-  height: 500px;
-  background-image: url("/assets/img/sample.jpg");
-  /* background-image: url(/assets/img/sample.jpg); */
+.box-3 {
+  /* font-family: futura-pt, sans-serif;
+  font-weight: 700; */
 
-  background-repeat: repeat;
-  background-repeat: no-repeat;
-
-  background-position: 0 0;
-  /* background-position: 100px -100px;
-  background-position: 50% 50%;
-
-  background-position: center center; */
-
-  background-position: 50% 50%;
-  background-size: 500px auto;
-  background-size: auto 500px;
-
-  background-size: cover;
-  /* background-size: contain; */
-}
-
-.border {
-  width: 400px;
-  height: 200px;
-  background-color: #d4f4c1;
-  /* border-width: 20px; */
-  border-style: solid;
-  border-color: #f2e9e9;
-
-  border-top-width: 5px;
-  border-right-width: 10px;
-  border-bottom-width: 15px;
-  border-left-width: 20px;
-
-  border-top-color: aqua;
-  border-right-color: antiquewhite;
-  border-bottom-color: #f27a82;
-  border-left-color: #CCC;
-
-  border-top-style: solid;
-  border-right-style: dotted;
-  border-bottom-style: double;
-  border-left-style: dashed;
-
-  /* border 속성의 축약형 (순서무관) */
-  border: 2px solid #000000;
-  border: solid 2px #000000;
-  border: none;
-  border: 0;
-
-  border-radius: 100px;
-  border-radius: 50%;
-  border-radius: 999px;
-
-  border-top-left-radius: 20px;
-  border-top-right-radius: 30px;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 50px;
-}
-
-.box-model {
-  /* width: 300px; */
-  /* height: 300px; */
-  /* min-width: 800px; */
-  /* min-height: 800px; */
-  width: 100%;
-  min-width: 400px;
-  max-width: 800px;
-  height: 50vh;
-  min-height: 150px;
-  height: 300px;
-  /* margin: 20px; */
-  /* padding: 40px; */
-  background-color: #ffffff;
-  /* border: 10px solid transparent; */
-  color: #000000;
+  font-family: essonnes-text, serif;
+  font-weight: 400;
+  font-style: italic;
 }
