--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,186 +1,122 @@
-:root {
-  --gh-height: 400px
-}
-
 * {
   margin: 0;
   padding: 0;
 }
 
-img {
-  display: inline-block;
-  vertical-align: top;
+.contents {
+  width: 100vw;
+  height: 100vh;
+  transform: perspective(1000px)
 }
 
-header#header {
+.box {
+  width: 300px;
+  height: 300px;
+  background-color: black;
+  text-align: center;
+  color: white;
+  font-weight: 600;
+  font-size: 80px;
+  line-height: 300px;
+
+  /* transform 위치 사이즈 회전 변형 속성*/
+  transform: translateX(50px) translateY(100px);
+
+  transition: transform 300ms ease-in-out;
+}
+
+.box.box-1 {
+  transform: scale(1.0) rotate(0deg);
+}
+
+.box-wrap {
+  width: 300px;
+  height: 300px;
+}
+
+.box-wrap:hover .box.box-1 {
+  transform: scale(0.3) rotate(90deg);
+}
+
+/*
+.box.box-1:hover {
+  transform: scale(0.3) rotate(90deg); 비율대로 사이즈 조절
+  앵커 기준 좌표 지정
+  transform-origin: 100% 0; 
+}
+*/
+
+.close {
   position: relative;
-  z-index: 1001;
-  background-color: white;
-  /* height: var(--gh-height); */
-  /* position: fixed;
-  z-index: 1000;
-  top: 0;
-  right: 0;
-  left: 0; */
-/* 
-  top: 50px;
-  right: 50px;
-  bottom: 50px;
-  left: 50px; */
-  /* bottom: 0; */
-  /*opacity: 0.5 */
+  width: 100px;
+  height: 100px;
+  margin: 50px;
+  margin-top: 200px;
+  background-color: lightblue;
 }
 
-#header:hover {
-  --gh-height: 200px
+.close span {
+  display: block;
+  position: absolute;
+  background-color: black;
 }
 
-#searchbar {
-  --search-duration: 120ms;
-  --search-ease: ease-in-out;
+.close span:first-child {
+  width: 100%;
+  height: 8px;
+  /* transform: translateY(-50%); 자기자신의 50%만큼 이동*/
+  transform: translateY(50px) rotate(45deg);
+  margin-top: -4px;
+}
 
-  position: fixed;
-  z-index: 1000;
-  top: 0;
+.close span:last-child {
+  width: 8px;
+  height: 100%;
+  transform: translateX(50px) rotate(45deg);
+  margin-left: -4px;
+}
+
+.close-2 {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin: 50px;
+  background-color: lightblue;
+}
+
+.close-2 span {
+  display: block;
+  position: absolute;
+  background-color: black;
+  transition: transform 200ms ease-in;
+}
+
+.close-2:hover span {
+  transition: transform 120ms ease-out;
+}
+
+.close-2 span:first-child {
+  top: 50%;
   right: 0;
   left: 0;
-  background-color: white;
-  border-bottom: 1px solid #10ce72;
-  /*호버 했다가 나갈때 움직임 설정*/
-  transition: all var(--search-duration) var(--search-ease); 
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0);
+  width: 100%;
+  height: 8px;
+  transform: translateY(-50%);
 }
 
-#searchbar:hover {
-  --search-duration: 320ms;
-  --search-ease: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-  padding-top: 15px;
-  padding-bottom: 15px;
-  /* border-bottom-width: 3px; */
-    border-bottom: 2px solid #10ce72;
-  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.12);
-  /*호버 할때 움직임 설정*/
-  /* transition: all 320ms ease-in;
-  transition: all 320ms cubic-bezier(0.860, 0.000, 0.070, 1.000); */
+.close-2 span:last-child {
+  top: 0;
+  bottom: 0;
+  right: 50%;
+  width: 8px;
+  height: 100%;
+  transform: translateX(50%);
 }
 
-#searchbar .content-area {
-  width: 1130px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-right: 30px;
-  padding-left: 30px;
+.close-2:hover span:first-child {
+  transform: translateY(-50%) rotate(-45deg);
 }
 
-
-header#header .content-area {
-  width: 1130px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-right: 30px;
-  padding-left: 30px;
-}
-
-header#header .special {
-  border-bottom: 1px solid #e4e8eb;
-}
-
-header#header .group {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
-}
-
-header#header .group nav.navigation {
-  float: left;
-}
-
-header#header .group .weather {
-  float: right;
-}
-
-/*박스 쉐도우 적용을 위해..*/
-header#header .group .content-area::after {
-  content: '';
-  display: block;
-  clear: both;
-  width: 0;
-  height: 0;
-}
-
-#contents {
-  width: 1130px;
-  min-height: calc(100vh - 714px);
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px 30px;
-  /* padding-top: 233px */
-}
-
-
-#contents main#main{
-  float: left;
-}
-
-#contents aside#aside {
-  float: right;
-}
-
-#contents main#main .veta + .newsstand {
-  margin-top: 12px;
-}
-
-#contents main#main .veta ~ .themecast {
-  position: relative;
-  margin-top: 35px;
-}
-
-#contents aside#aside .account + .timesquare {
-  margin-top: 12px;
-}
-
-#contents aside#aside .account ~ .veta_brandin {
-  margin-top: 12px;
-}
-
-#contents aside#aside .account ~ .shop {
-  margin-top: 15px;
-}
-
-
-#contents main#main .themecast p.paddle {
-  position: absolute;
-  top: 40px;
-  width: 40px;
-  height: 40px;
-  background-image: url(/assets/img/naver_main.png);
-  background-size: 442px 428px;
-}
-
-#contents main#main .themecast p.paddle.paddle-prev {
-  left: -20px;
-  background-position: -128px -342px;
-}
-
-#contents main#main .themecast p.paddle.paddle-next {
-  right: -20px;
-  background-position: -44px -342px;
-}
-
-#contents::after {
-  content: '';
-  display: block;
-  clear: both;
-  width: 0;
-  height: 0;
-}
-
-footer#footer {
-  background-color: #fafbfc;
-  border-top: 1px solid #e4e8eb;
-}
-
-footer#footer .gf-content {
-  width: 1130px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px 30px;
+.close-2:hover span:last-child {
+  transform: translateX(50%) rotate(-45deg);
 }
