--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,387 +1,297 @@
-/*---- Reset ----*/
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+/*-- Reset. --*/
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, textarea, p, blockquote, th, td, input, select, textarea, button, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+  padding: 0
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
+article, aside, details, figcaption, figure, footer, header, main, hgroup, menu, nav, section {
+  display: block
 }
+
+audio, canvas, progress, video {
+  display: inline-block
+}
+
+a, abbr, address, article, aside, audio, b, blockquote, body, br, button, canvas, caption, cite, code, col, data, datalist, dd, del, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hr, html, i, iframe, img, input, ins, kbd, label, legend, li, main, mark, meter, nav, object, ol, output, p, pre, progress, q, s, samp, section, select, small, span, strong, sub, sup, table, td, textarea, th, time, u, ul, var, video {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent
+}
+
+html {
+  -ms-content-zooming: none;
+  -ms-touch-action: pan-x pan-y
+}
+
 body {
-  line-height: 1;
+  -webkit-text-size-adjust: none
 }
-ol,
-ul {
-  list-style: none;
+
+fieldset, img {
+  border: 0 none
 }
-blockquote,
-q {
-  quotes: none;
+
+dl, ul, ol, menu, li {
+  list-style: none
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
+
+blockquote, q {
+  quotes: none
 }
+
+blockquote::before, blockquote::after, q::before, q::after {
+  content: none
+}
+
+input, select, textarea, button {
+  font-size: 100%;
+  vertical-align: middle;
+  outline: none
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button {
+  border: 0 none;
+  background-color: transparent;
+  cursor: pointer;
+  overflow: hidden
+}
+
 table {
   border-collapse: collapse;
-  border-spacing: 0;
+  border-spacing: 0
 }
 
-/*----------*/
-img {
-  display: inline-block;
-  vertical-align: top;
+input[type="text"], input[type="tel"], input[type="password"], input[type="submit"], input[type="search"], input[type="number"] {
+  background-color: transparent;
+  border-radius: 0;
+  box-shadow: 0 0 0 0 transparent inset;
+  transition: color .1s ease, border-color .1s ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none
 }
 
-aside#banner {
+input:checked[type="checkbox"] {
+  background-color: #000000;
+  -webkit-appearance: checkbox
+}
+
+button, input[type="button"], input[type="submit"], input[type="reset"], input[type="file"] {
+  -webkit-appearance: button;
+  border-radius: 0
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none
+}
+
+input[type="date"] {
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none
+}
+
+input[type="date"]:invalid::-webkit-datetime-edit {
+  color: #000000
+}
+
+input[type="date"]::-webkit-clear-button {
+  display: none
+}
+
+input[type="date"]::-webkit-inner-spin-button {
+  display: none
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: #000000
+}
+
+input[type="date"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  background-color: transparent
+}
+
+textarea {
+  background-color: transparent;
+  border: none;
+  resize: none
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0
+}
+
+[hidden], template {
+  display: none
+}
+
+a, a:active, a:hover {
+  text-decoration: none
+}
+
+address, caption, cite, code, dfn, em, var {
+  font-style: normal;
+  font-weight: 400
+}
+
+i {
+  font-style: normal
+}
+
+a, button {
   position: relative;
-  width: 100%;
-  background-color: #54b8fb;
+  -webkit-tap-highlight-color: transparent
 }
 
-/* aside#banner button.close_button {
+input {
+  border-radius: 0;
+  border: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  opacity: 1
+}
+
+a {
+  color: #000000;
+  -webkit-transition: color 200ms ease-in-out;
+  -moz-transition: color 200ms ease-in-out;
+  -o-transition: color 200ms ease-in-out;
+  transition: color 200ms ease-in-out
+}
+
+a:focus, input:focus, textarea:focus, button:focus {
+  outline: none
+}
+
+.blind {
   overflow: hidden;
+  display: none;
+  visibility: hidden;
   position: absolute;
-  top: 0;
-  right: 0;
-  width: 50px;
-  height: 50px;
-  padding: 0;
-  background-color: red;
-  border: 0;
-  text-indent: -9999px;
-  cursor: pointer;
-} */
-
-/* aside#banner button.close_button::before,
-aside#banner button.close_button::after {
-  content: '';
-  display: block;
-  position: absolute;
-  background-color: white;
-} */
-
-aside#banner .close_box {
-  position: absolute;
-  top: 5px;
-  right: 30px;
-  width: 24px;
-  height: 24px;
+  clip: rect(0 0 0 0);
+  width: 0;
+  height: 0
 }
 
-.close {
-  overflow: hidden;
-  position: relative;
-  width: 40px;
-  height: 40px;
-  text-indent: -9999px;
+html, body, th, td, input, select, textarea, button {
+  color: #000000;
+  text-size-adjust: none;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizelegibility;
+  font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.5rem
 }
 
-.close::before,
-.close::after {
-  content: '';
-  display: block;
-  position: absolute;
-  background-color: white;
-  opacity: 0.5;
-  transition: opacity 180ms ease-in-out;
+select,button{user-select:none;-webkit-user-select:none}
+::-moz-selection {
+  background-color: #000000;
+  text-shadow: none;
+  color: #ffffff
 }
 
-.close::after {
-  top: 20%;
-  bottom: 20%;
-  right: 50%;
-  width: 2px;
-  transform: translateX(50%) rotate(-45deg);
+::selection {
+  background-color: #000000;
+  text-shadow: none;
+  color: #ffffff
 }
 
-.close::before {
-  top: 50%;
-  right: 20%;
-  left: 20%;
-  height: 2px;
-  /* margin-top: -1px; */
-  transform: translateY(-50%) rotate(-45deg);
+input[autocomplete="off"]::-webkit-contacts-auto-fill-button {
+  display: none !important;
+  visibility: hidden;
+  height: 0;
+  width: 0;
+  margin: 0;
+  pointer-events: none
 }
 
-.close:hover::before,
-.close:hover::after {
-  opacity: 1;
+.visually_hidden {
+    display: none !important;
+    visibility: hidden !important;
+    width: 0;
+    height: 0;
+    clip: rect(0, 0, 0, 0);
+    pointer-events: none
 }
 
-/* aside#banner {
+/*-- Layout --*/
+/*-- Global Header --*/
+#global_header {
+  --gn_bg: rgba(22, 22, 23, 0.8);
+}
+
+body {
+  height: 500vh;
+}
+
+nav#global_navigation {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
-} */
-
-header#header {
-  position: sticky;
-  top: 0;
-  right: 0;
-  left: 0;
-  background-color: white;
+  min-width: 320px;
+  max-height: 44px;
+  background-color: var(--gn_bg);
+  /*아래 요소가 블러처리되는 효과*/
+  backdrop-filter: saturate(180%) blur(20px);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
 }
 
-header#header .logo .content-area {
-  position: relative;
-}
+nav#global_navigation .gn-content {}
+ul#gn_list {}
+ul#gn_list li.gn_item {}
 
-header#header .logo .content-area > a#logo.logo {
+ul#gn_list li.gn_item.gn_item_apple {}
+ul#gn_list li.gn_item.gn_item_apple a.gn_link {
   overflow: hidden;
-  display: block;
-  position: absolute;
-  top: 21px;
-  left: 184px;
-  width: 82px;
-  height: 38px;
-  background-color: white;
-  background-image: url(/assets/img/ohou_main.png);
-  background-size: 108px 91px;
-  background-position: -10 0;
-  text-indent: -9999px;
 }
-
-aside#banner .banner_content,
-header#header .header_content,
-main#main .main_content,
-footer#footer .footer-content {
-  width: 1256px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 60px;
-  padding-left: 60px;
-  box-sizing: border-box;
+ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple {}
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image {}
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image.gn_link_image--d {}
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image.gn_link_image--m {
+  display: none;
 }
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_text {text-indent: -9999rem;}
 
-header#header,
-header#header nav#navigation {
-  border-bottom: 1px solid #eaedef;
-}
+ul#gn_list li.gn_item.gn_item_menu {}
+ul#gn_list li.gn_item.gn_item_menu .gn_menu_flyout {}
+ul#gn_list li.gn_item.gn_item_menu .gn_menu_list {}
+ul#gn_list li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item {}
 
-main#main {
-  padding-top: 30px;
-  padding-bottom: 40px;
-}
+li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item a.gn_menu_link {}
 
-section#overview {
-  display: flex;
-  /* justify-content: space-between; */
-  /* gap: 25px; */
-}
+li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item a.gn_menu_link span.gn_menu_link_text {}
 
-section#overview .events {
-  margin-left: auto;
-}
+ul#gn_list li.gn_item.gn_item_search {}
 
-/* section#overview .project + .events {
-  margin-left: 25px;
-} */
+ul#gn_list li.gn_item.gn_item_bag {}
 
-section#categories {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
 
-/* section#articles_first {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 40px;
-} */
-
-section#articles_first .article + .article {
-  margin-top: 40px;
-}
-
-/* section#articles_first .article {
-  margin-bottom: 40px;
-}
-
-section#articles_first .article:last-child {
-  margin-bottom: 0;
-} */
-
-/* section#articles_first .article {
-  margin-top: 40px;
-}
-
-section#articles_first .article:first-child {
-  margin-top: 0;
-} */
-
-/* section#category_finder,
-section#today_deal,
-section#article_second,
-section#top10,
-section#reviews,
-section .events {
-  margin-top: 40px;
-} */
-
-main#main section + section {
-  margin-top: 40px;
-}
-
-section#article_second .article + .article {
-  margin-top: 40px;
-}
-
-section#best .head,
-section#best .list {
-  display: flex;
-}
-
-section#best .head .util {
-  margin-left: auto;
-}
-
-section#best .menu {
-  position: relative;
-  margin-top: 20px;
-}
-section#best .menu a#slide {
-  display: block;
-  position: absolute;
-  top: -10px;
-  right: -20px;
-  width: 48px;
-  height: 48px;
-  background-color: white;
-  background-image: url(/assets/img/ohou_main.png);
-  background-size: 108px 91px;
-  background-position: 94% 90%;
-  border-radius: 100%;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-}
-
-/* section#best .list .item + .item {
-  margin-left: 20px;
-} */
-
-section#best .menu + .list {
-  margin-top: 20px;
-}
-
-section#best .list .list_wrap {
-  display: flex;
-  /* margin-top: -20px; */
-  margin-right: -10px;
-  /* margin-bottom: -20px; */
-  margin-left: -10px;
-}
-
-section#best .list .item {
-  /* width: 50%; */
-  /* padding-top: 20px; */
-  padding-right: 10px;
-  /* padding-bottom: 20px; */
-  padding-left: 10px;
-  box-sizing: border-box;
-}
-
-section#best .list .item img {
-  width: 100% !important;
-}
-
-footer#footer {
-  background-color: #f8f9fb;
-}
+#gn_menu_trigger {}
