--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,7 @@ input[autocomplete="off"]::-webkit-contacts-auto-fill-button {
     height: 0;
     clip: rect(0, 0, 0, 0);
     pointer-events: none
+
 }
 
 /*-- Layout --*/
@@ -264,25 +265,72 @@ nav#global_navigation {
   -webkit-backdrop-filter: saturate(180%) blur(20px);
 }
 
-nav#global_navigation .gn-content {}
-ul#gn_list {}
+nav#global_navigation .gn_content {
+  max-width: 1024px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 22px;
+  padding-left: 22px;
+}
+
+ul#gn_list {
+  display: flex;
+  width: 100%;
+  margin-right: -8px;
+  margin-left: -8px;
+  justify-content: space-between;
+  align-items: center;
+}
 ul#gn_list li.gn_item {}
 
 ul#gn_list li.gn_item.gn_item_apple {}
-ul#gn_list li.gn_item.gn_item_apple a.gn_link {
+ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple,
+ul#gn_list li.gn_item.gn_item_search button.gn_search_button,
+ul#gn_list li.gn_item.gn_item_bag button.gn_bag_button {
   overflow: hidden;
+  display: flex;
+  width: 30px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  /* padding-right: 8px;
+  padding-left: 8px; */
 }
+
+ul#gn_list li.gn_item.gn_item_search button.gn_search_button {
+  width: 31px;
+}
+
 ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple {}
 li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image {}
+
+ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple {}
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image svg {
+  display: block;
+}
+
+ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple {}
+
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image svg path {
+  fill: #ffffff;
+}
+
 li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image.gn_link_image--d {}
+
 li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image.gn_link_image--m {
   display: none;
 }
+
 li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_text {text-indent: -9999rem;}
 
-ul#gn_list li.gn_item.gn_item_menu {}
+ul#gn_list li.gn_item.gn_item_menu {
+  flex-grow: 1;
+}
+
 ul#gn_list li.gn_item.gn_item_menu .gn_menu_flyout {}
-ul#gn_list li.gn_item.gn_item_menu .gn_menu_list {}
+ul#gn_list li.gn_item.gn_item_menu .gn_menu_list {
+  display: flex;
+}
 ul#gn_list li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item {}
 
 li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item a.gn_menu_link {}
@@ -291,7 +339,104 @@ li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item a.gn_menu_link span.gn_menu_
 
 ul#gn_list li.gn_item.gn_item_search {}
 
+li.gn_item.gn_item_search button.gn_search_button span.gn_search_image.gn_search_image--d {}
+
+li.gn_item.gn_item_search button.gn_search_button span.gn_search_image.gn_search_image--m {
+  display: none;
+}
+
+li.gn_item.gn_item_search button.gn_search_button span.gn_search_text {
+  text-indent: -9999rem;
+}
+
 ul#gn_list li.gn_item.gn_item_bag {}
 
+li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_image.gn_bag_image--d {}
 
-#gn_menu_trigger {}
+li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_image.gn_bag_image--m {
+  display: none;
+}
+
+li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_text {
+  text-indent: -9999rem;
+}
+
+#gn_menu_trigger {
+  display: none;
+}
+
+.layout {
+  position: relative;
+  width: 100%;
+}
+
+.layout .layout_area {
+  max-width: 1024px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 22px;
+  padding-left: 22px;
+}
+
+.layout .layout_list {
+  width: 100%;
+  padding-top: 44px;
+  padding-bottom: 44px;
+  background-color: blue;
+}
+
+.layout .layout_list .layout_list_wrap {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -25px;
+  margin-right: -10px;
+  margin-bottom: -25px;
+  margin-left: -10px;
+}
+
+.layout .layout_list .layout_item {
+  width: 20%;
+  padding: 25px 10px;
+  /* padding-top: 25px;
+  padding-right: 10px;
+  padding-bottom: 25px;
+  padding-left: 10px; */
+}
+
+.layout .layout_list .layout_item .box {
+  width: 100%;
+  height: 300px;
+  background-color: black;
+  text-align: center;
+  color: white;
+  font-size: 150px;
+  line-height: 300px;
+}
+
+@media only screen and (max-width: 360px) {
+  .layout .layout_list .layout_item {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 481px) and  (max-width: 680px) {
+  .layout .layout_list .layout_item {
+    width: 33.3%;
+  }
+}
+
+@media only screen and (min-width: 361px) and  (max-width: 480px) {
+  .layout .layout_list .layout_item {
+    width: 50%;
+  }
+}
+
+@media only screen and (min-width: 681px) and  (max-width: 800px) {
+  .layout .layout_list .layout_item {
+    width: 25%;
+    padding:...!?
+  }
+}
+
+*위 구조 다시 만들어 보기
+*각 미디어 사이즈마다 간격 조정하기
